--- a/XYZReader/src/main/res/layout/activity_article_list.xml
+++ b/XYZReader/src/main/res/layout/activity_article_list.xml
@@ -28,12 +28,11 @@
         android:id="@+id/toolbar_container"
         android:layout_width="match_parent"
         android:layout_height="112dp"
-        android:background="?colorPrimary"
         app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
         android:fitsSystemWindows="true"
+   app:elevation="4dp"
 
-
-        android:elevation="8dp">
+      >
 
         <android.support.design.widget.CollapsingToolbarLayout
             android:id="@+id/toolbar"
